test/corpus/footnotes.txt
==================
Basic inline footnote
==================

Text with ^[inline note] here.

---

(document
  (blank_line)
  (paragraph
    content: (inline
      (text)
      (inline_footnote
        (inline_footnote_open)
        (inline_footnote_content)
        (inline_footnote_close))
      (text))))

==================
Nested inline footnotes
==================

^[outer^[inner]]

---

(document
  (blank_line)
  (paragraph
    content: (inline
      (inline_footnote
        (inline_footnote_open)
        (inline_footnote_content
          (inline_footnote
            (inline_footnote_open)
            (inline_footnote_content)
            (inline_footnote_close)))
        (inline_footnote_close)))))

==================
Basic footnote reference
==================

Text with reference[^1].

---

(document
  (blank_line)
  (paragraph
    content: (inline
      (text)
      (footnote_reference
        (footnote_reference_marker))
      (text))))

==================
Multiple footnote references
==================

First[^1] and second[^2] references.

---

(document
  (blank_line)
  (paragraph
    content: (inline
      (text)
      (footnote_reference
        (footnote_reference_marker))
      (text)
      (footnote_reference
        (footnote_reference_marker))
      (text))))

==================
Footnote definition
==================

[^1]: This is a footnote definition.

---

(document
  (blank_line)
  (footnote_definition
    marker: (footnote_marker)
    content: (inline
      (text))))

==================
Footnote definition with inline formatting
==================

[^note]: This has **bold** and *italic* text.

---

(document
  (blank_line)
  (footnote_definition
    marker: (footnote_marker)
    content: (inline
      (text)
      (strong_emphasis
        (strong_emphasis_delimiter)
        (text)
        (strong_emphasis_delimiter))
      (text)
      (emphasis
        (emphasis_delimiter)
        (text)
        (emphasis_delimiter))
      (text))))

==================
Multiple footnotes in paragraph
==================

Text with first[^1] and inline^[note] and second[^2].

---

(document
  (blank_line)
  (paragraph
    content: (inline
      (text)
      (footnote_reference
        (footnote_reference_marker))
      (text)
      (inline_footnote
        (inline_footnote_open)
        (inline_footnote_content)
        (inline_footnote_close))
      (text)
      (footnote_reference
        (footnote_reference_marker))
      (text))))

==================
Footnote with inline code
==================

[^code]: This footnote has `inline code` in it.

---

(document
  (blank_line)
  (footnote_definition
    marker: (footnote_marker)
    content: (inline
      (text)
      (code_span
        (code_span_delimiter)
        (code_span_content)
        (code_span_delimiter))
      (text))))
